--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,9 @@ h2{
 }
 
 img{
+
     display: block;
+    height: auto
 }
 
 .visually-hidden {
@@ -61,13 +63,11 @@ img{
   }
 
   .container {
-    margin-left: auto;
-    margin-right: auto;
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-
-    
+    margin-left: auto;
+    margin-right: auto;
   }
 
 
@@ -75,6 +75,7 @@ img{
 
 
 .page-header{
+    border-bottom: 1px solid #ECECEC;
     background-color: var(--header-background-color);
 }
 
@@ -224,11 +225,15 @@ img{
 .benefits-list{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .benefits-list .item{
     width: 270px;
+    margin-right: 30px;
+}
+
+.benefits-list .item:last-child{
+    margin-right: 0;
 }
 
 .benefits-list .title{
@@ -266,7 +271,14 @@ img{
 
 .specialization-list{
     display: flex;
-    justify-content: space-between;
+}
+
+.specialization-list .item{
+    margin-right: 30px;
+}
+
+.specialization-list .item:last-child{
+    margin-right: 0;
 }
 
 
@@ -285,15 +297,13 @@ img{
 
 .team-list{
     display: flex;
-    justify-content: space-between;
 
-    text-align: center;
-    
+    text-align: center; 
 }
 
 .team-list .item{
     width: 270px;
-    height: 368px;
+    margin-right: 30px;
     
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -301,9 +311,9 @@ img{
     background-color: #FFFFFF;
 }
 
-.team-list .item img{
-    margin-top: 0;
-    margin-bottom: 30px;
+.team-border{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .team-list .item h3{
@@ -319,8 +329,7 @@ img{
 
 .team-list .item p{
     margin-top: 0;
-    margin-bottom: 30px;
-    
+    margin-bottom: 0;
 
     font-size: 16px;
     line-height: 1.19;
@@ -400,9 +409,13 @@ img{
 }
 
 .portfolio-nav{
+    display: flex;
+    justify-content: center;
     margin-bottom: 50px;
+}
 
-    outline: 2px solid green;
+.portfolio-nav .item.item:not(:last-child){
+    padding-right: 8px;
 }
 
 .button-portfolio{
@@ -423,25 +436,47 @@ img{
 }
 
 .content-list{
-    outline: 2px solid violet;
 }
 
 .content-list .item{
-    width: 371px;
-    height: 404px;
+    width: 370px;
+}
 
-    border: 1px solid #EEEEEE;
+.portfolio-border{
     box-sizing: border-box;
+
+    padding-top: 20px;
+    padding-right: 24px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    border: 1px solid #EEEEEE;
+    border-top: 0;
+
     background: #FFFFFF;
+}
+
+.content-list{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.content-list .item{
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.content-list .item:nth-child(3n){
+    margin-right: 0;
+}
+
+.content-list .item:nth-last-child(-n+3){
+    margin-bottom: 0;
 }
 
 .content-list .link{
     text-decoration: none;
     color: var(--primary-text-color);
-}
-
-.content-list .item img{
-    margin-bottom: 20px;
 }
 
 .content-list .item h3{
@@ -456,8 +491,8 @@ img{
 }
 
 .content-list .item p{
-    margin-top: 0px;
-    margin-bottom: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
 
     font-size: 16px;
     line-height: 1.88;
