--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   --secondary-text-color: #757575;
   --logo-color: #2196f3;
   --header-background-color: #ffffff;
-  --benefits-background-color: #e5e5e5;
+  --benefits-background-color: #ffffff;
   --team-background-color: #f5f4fa;
   --footer-background-color: #2f303a;
   --accent-color: #2196f3;
